--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,11 @@
 ---
-layout: default
+layout: page
 ---
-<article>
-  <h1>{{ page.title }}</h1>
-  <p style="color:#9ca3af; font-size:14px;">
-    {{ page.date | date: "%Y-%m-%d" }}
-  </p>
-  {{ content }}
+
+<article class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <p class="post-date">{{ page.date | date: "%Y-%m-%d" }}</p>
+  <div class="post-body">
+    {{ content }}
+  </div>
 </article>
